# mysql-cdc-example

./: README.md  docker-compose.yml  fintech-data-generator.py  macros-01.xml  my.cnf
binlog-tap/: Cargo.toml  Dockerfile  ZERO_COPY_GUIDE.md  table_config.toml  table_config_example.toml  test_sizeof  test_sizeof.rs  test_sizeof2  test_sizeof2.rs  test_unwrap.rs
binlog-tap/benches/: zero_copy_bench.rs
binlog-tap/docs/: MEMORY_COMPARISON.md
binlog-tap/src/: lib.rs  main.rs  zero_copy.rs
binlog-tap/src/config/: mod.rs
binlog-tap/src/errors/: mod.rs
fintech-data-generator-rs/: Cargo.toml
fintech-data-generator-rs/src/: db.rs  ingest.rs  main.rs  utils.rs
infra/: .env.example  cluster.xml  docker-compose.yml  macros-02.xml  my.cnf
