[package]
name = "binlog-tap"
version = "0.1.0"
edition = "2024"

[dependencies]
# Driver utama dengan fitur binlog
mysql_async = { version = "0.36.1", features = ["binlog"] }

# Runtime untuk menjalankan asinkron
tokio = { version = "1.0", features = ["full"] }

# Untuk menangani stream data binlog secara asinkron
futures = "0.3"

# Untuk serialisasi data yang ditangkap (opsional, tapi disarankan)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"


# Untuk logging proses CDC
log = "0.4"
env_logger = "0.11"

# error handling
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["stream"] }
bytes = "1.11.1"
urlencoding = "2.1.3"
